rapido.css
.rapido * {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
}

body.rapido {
	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	color: #353839;
	margin: 0;
	padding: 0;
}

.rapido article {
	width: 980px;
	max-width: 100%;
	margin: auto;
	padding: 0 50px;
}

@media (max-width: 979px) {
	.rapido article {
		width: 640px;
		padding: 0 20px 0 20px;
	}
}

.rapido a {
	color: #2243b6;
}

.rapido section {
	width: 100%;
	padding: 10px 0;
}

.rapido section > h1 {
	font-size: 30px;
	line-height: 45px;
	width: 100%;
	max-width: 640px;
	font-weight: bold;
	margin: 0 0 30px 0;
}

.rapido section > h1::before {
	content: '/';
	padding-right: 10px;
	margin-left: 0;
}

.rapido section > h2 {
	font-size: 20px;
	line-height: 30px;
	font-weight: bold;
	width: 100%;
	max-width: 640px;
	margin: 0 0 20px 0;
}

.rapido p,
.rapido section p {
	font-size: 18px;
	line-height: 27px;
	max-width: 640px;
	margin: 0 0 20px 0;
	position: relative;
}

.rapido code {
	font-family: monospace;
	font-size: inherit;
	line-height: inherit;
	color: #0a7e8c;
}

.rapido code > mark {
	background: #ededed;
	color: #6f2da8;
}

.rapido strong {
	font-style: normal;
	font-weight: bold;
}

.rapido q,
.rapido em {
	font-style: italic;
	font-weight: normal;
}

.rapido div {
	width: 100%;
	max-width: 640px;
	overflow: scroll;
}

.rapido p > img {
	vertical-align: middle;
}

.rapido pre {
	background: #ededed;
	font-family: monospace;
	font-size: 14px;
	line-height: 21px;
	width: 640px;
	padding: 10px;
	overflow: scroll;
	border-radius: 2px;
}

.rapido section > aside {
	max-width: 640px;
	width: 100%;
	border-top: 2px solid #353839;
	border-bottom: 2px solid #353839;
	padding-top: 20px;
	margin: 0 0 20px 0;
}

.rapido section > aside > p {
	font-size: 30px;
	line-height: 45px;
	max-width: 640px;
	margin: 0 0 20px 0;
	position: relative;
}

.rapido section > blockquote {
	max-width: 640px;
	width: 100%;
	padding: 20px 40px 0 40px;
}

@media (max-width: 380px) {
	.rapido section > blockquote {
		padding: 20px 20px 0 20px;
	}
}

.rapido section > blockquote > p {
	font-size: 18px;
	line-height: 27px;
}

.rapido section > blockquote > p::before {
	content: '“';
}

.rapido section > blockquote > p::after {
	content: '”';
}

.rapido section > cite {
	display: block;
	text-align: right;
	font-size: 16px;
	line-height: 24px;
	width: 100%;
	max-width: 640px;
	margin: 0 0 20px 0;
}

.rapido section > cite::before {
	content: "– ";
}

.rapido figure {
	margin: 20px 0 20px 0;
	display: flex;
	align-items: flex-start;
	flex-wrap: wrap;
}

.rapido figcaption {
	width: 220px;
	margin-left: 20px;
}

@media (max-width: 979px) {
	.rapido figcaption {
		width: 640px;
		margin: 5px 0 0 0;
	}
}

.rapido figure > div {
	width: 640px;
	max-width: 100%;
	overflow: scroll;
	background-color: #ededed;
}

.rapido section figure > img,
.rapido section figure > video {
	display: block;
	flex: 0 0 auto;
	width: 640px;
	height: auto;
	box-shadow: 0 0 15px -5px rgba(0, 0, 0, 0.23);
	border-radius: 5px;
	max-width: 100%;
}

.rapido section figure > p {
	width: 640px;
}

.rapido section figcaption > h1 {
	display: inline;
	font-size: 14px;
	font-weight: bold;
	line-height: 21px;
	padding: 0 5px 0 0;
}

.rapido section figcaption > h1::after {
	content: '.';
}

.rapido section figcaption > p {
	display: inline;
	font-size: 14px;
	line-height: 21px;
}

.rapido table {
	min-width: 640px;
	padding: 10px;
	text-align: left;
	font-family: inherit;
	font-size: 14px;
	line-height: 21px;
	background-color: #ededed;
}

.rapido td,
.rapido th {
	padding: 5px 10px;
	vertical-align: top;
}

.rapido article small {
	font-size: 14px;
	line-height: 21px;
	width: 220px;
	float: right;
	padding: 3px 0 0 0;
	position: absolute;
	right: -240px;
	top: 0;
}

@media (max-width: 979px) {
	.rapido article small {
		width: 100%;
		float: none;
		padding: 0;
		margin: 20px 0;
		position: relative;
		right: unset;
		top: unset;
		display: block;
	}
}

.rapido article small > p {
	font-size: 14px;
	line-height: 21px;
}

.rapido article > header {
	max-width: 640px;
	width: 100%;
	margin: 50px 0;
}

@media (max-width: 979px) {
	.rapido article > header {
		margin: 30px 0;
	}
}

.rapido article > header > h1 {
	font-size: 60px;
	line-height: 80px;
	font-weight: bold;
	margin: 0 0 50px 0;
}

@media (max-width: 979px) {
	.rapido article > header > h1 {
		font-size: 40px;
		line-height: 60px;
	}
}

@media (max-width: 499px) {
	.rapido article > header > h1 {
		font-size: 30px;
		line-height: 45px;
	}
}

.rapido article > header > p {
	font-size: 24px;
	line-height: 36px;
}

.rapido article > header > address {
	font-style: normal;
	margin-bottom: 20px;
	display: flex;
	flex-wrap: wrap;
	align-items: center;
}

.rapido article > header > address > a {
	margin: 5px 15px 5px 0;
	flex: 0 0 auto;
	width: unset;
}

.rapido article > header > address > a > img {
	vertical-align: middle;
	border-radius: 15px;
	width: 30px;
	height: 30px;
	margin: 0 10px 0 0;
}

@media (max-width: 380px) {
	.rapido div > ol,
	.rapido div > ul {
		min-width: 380px;
	}
}

.rapido article ul,
.rapido article ol {
	max-width: 640px;
	width: 100%;
	list-style: none;
}

.rapido article li {
	padding: 10px 0 10px 5px;
	border-bottom: 1px solid #ededed;
	font-size: 14px;
	line-height: 21px;
	display: flex;
}

.rapido article li > var {
	font-family: monospace;
	font-style: normal;
	font-weight: bold;
	flex: 0 0 auto;
	width: 100px;
	display: inline-block;
}

.rapido article li > p {
	flex: 0 0 auto;
	width: 110px;
	text-overflow: ellipsis;
	white-space: normal;
	overflow: hidden;
	margin: 0;
}

.rapido article li > p,
.rapido article li > span,
.rapido article li > var {
	font-size: 14px;
	line-height: 21px;
}

.rapido article li > p:last-child {
	flex: 1 1 auto;
	width: auto;
}

.rapido article li > span {
	flex: 0 0 auto;
	width: 30px;
}

.rapido article li > span::first-letter {
	text-transform: capitalize;
}

.rapido main > header {
	width: 100%;
	min-height: 70px;
	margin: 0;
	padding: 0;
}

.rapido main > header > nav {
	display: none;
	position: relative;
	overflow-x: hidden;
	overflow-y: auto;
}

.rapido main > header > nav a {
	display: flex;
	position: relative;
}

.rapido main > header > button {
	display: none;
	height: 70px;
	width: 100%;
	text-align: right;
	background: #fff;
	border: 0;
	min-height: 70px;
	border-bottom: 1px solid #ededed;
}

.rapido main > header > button > a {
	font-size: 30px;
	text-decoration: none;
	color: inherit;
	padding: 0 25px;
}

.rapido main > header > nav + button {
	text-align: center;
	border-bottom: 2px solid #353839;
}

.rapido main > header > nav + button > a {
	font-size: 16px;
	text-decoration: none;
	color: inherit;
	opacity: 0.5;
}

.rapido main > header > button:first-child {
	text-align: right;
}

.rapido main > header > nav > ul {
	display: block;
	position: relative;
	list-style-type: none;
	margin: 0;
	padding: 0;
}

.rapido main > header > nav > ul > li {
	border-bottom: 1px solid #ededed;
	min-height: 70px;
	display: flex;
	align-items: center;
	justify-content: flex-start;
	padding: 0 20px;
}

.rapido main > header > nav > ul > li > a {
	display: flex;
	align-items: center;
	text-decoration: none;
	font-weight: bold;
	font-size: 16px;
	color: #353839;
	height: 100%;
	width: 100%;
}

.rapido main > header > nav > ul > li > a > img {
	width: 30px;
	margin: 0 0 0 10px;
	vertical-align: middle;
}

@media only screen and (min-width: 980px) {
	.rapido main > header {
		min-height: 90px;
		border-bottom: 1px solid #ededed;
		display: flex;
		align-items: center;
		justify-content: flex-end;
	}

	.rapido main > header > nav {
		display: block;
		position: relative;
		overflow: visible;
	}

	.rapido main > header > nav > ul {
		min-height: 0;
	}

	.rapido main > header > nav > ul > li {
		display: inline-block;
		border-bottom: 0;
		min-height: 0;
		padding: 0 40px 0 0;
	}
}

/* hint from https://github.com/codezero-be/responsive-nav */
@media only screen and (max-width: 979px) {
	.rapido main > header > button:first-child {
		display: block;
	}

	.rapido main > header > nav:hover + button,
	.rapido main > header > nav:hover,
	.rapido main > header > button:first-child:hover + nav,
	.rapido main > header > button:first-child:hover + nav + button {
		display: block;
	}
}

.rapido main > footer:last-child {
	width: 100%;
	height: 50px;
	border-top: 1px solid #ededed;
	display: flex;
	align-items: center;
	justify-content: center;
}

.rapido main > footer:last-child p,
.rapido main > footer:last-child small {
	width: unset;
	max-width: unset;
	font-family: monospace;
	margin: 0;
	font-size: 12px;
	line-height: 18px;
	text-align: center;
}

